--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## SPDX-FileCopyrightText: 2019 Shulhan <ms@kilabit.info>
+## SPDX-License-Identifier: GPL-3.0-or-later
 /ciigo
 /ciigo-example
 /_bin/ciigo-darwin-amd64
