all: simplify make tasks
Instead of separating different build directory for OS, use single
_bin directory.

If we want to build for different OS/arch, can set the GOOS and GOARCH
environment variables before running make.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@
 ## SPDX-License-Identifier: GPL-3.0-or-later
 /ciigo
 /ciigo-example
-/_bin/ciigo-darwin-amd64
-/_bin/ciigo-linux-amd64
+/_bin
 *.html
