all: rewrite watcher tests using lib/test.Data
Instead of using another template, use the embedded template when
generating HTML.
In this way we can see how the generated HTML looks like.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 ## SPDX-FileCopyrightText: 2019 Shulhan <ms@kilabit.info>
 ## SPDX-License-Identifier: GPL-3.0-or-later
+*.html
+/_bin
 /ciigo
 /ciigo-example
-/_bin
-*.html
-cover.out
+/testdata/watcher/test.adoc
+/testdata/watcher/test.md
 cover.html
+cover.out
